--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                   <use href="./images/svg/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="feature-text">
+              <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
@@ -141,8 +141,8 @@
                   <use href="./images/svg/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="feature-text">
+              <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
@@ -152,8 +152,8 @@
                   <use href="./images/svg/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="title">ПЛАНУВАННЯ</h3>
-              <p class="feature-text">
+              <h3 class="features-title">ПЛАНУВАННЯ</h3>
+              <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
@@ -163,8 +163,8 @@
                   <use href="./images/svg/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="feature-text">
+              <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
@@ -190,136 +190,136 @@
           </ul>
         </div>
       </section>
-      <section class="team-section section">
+      <section class="team section">
         <div class="container">
-          <h2 class="our-team-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="team-link">
+          <h2 class="team__title">Наша команда</h2>
+          <ul class="team__list list">
+            <li class="team__link">
               <img src="./images/team/img.jpg" alt="Ігор Дем'яненко" width="270" />
-              <div class="team-container">
-                <h3 class="team-title">Ігор Дем'яненко</h3>
-                <p lang="en" class="team-profession">Product Designer</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+              <div class="team__container">
+                <h3 class="team__name">Ігор Дем'яненко</h3>
+                <p lang="en" class="team__profession">Product Designer</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
               </div>
             </li>
-            <li class="team-link">
+            <li class="team__link">
               <img src="./images/team/img1.jpg" alt="Ольга Рєпіна" width="270" />
-              <div class="team-container">
-                <h3 class="team-title">Ольга Рєпіна</h3>
-                <p lang="en" class="team-profession">Frontend Developer</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+              <div class="team__container">
+                <h3 class="team__name">Ольга Рєпіна</h3>
+                <p lang="en" class="team__profession">Frontend Developer</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
               </div>
             </li>
-            <li class="team-link">
+            <li class="team__link">
               <img src="./images/team/img2.jpg" alt="Микола Тарасов" width="270" />
-              <div class="team-container">
-                <h3 class="team-title">Микола Тарасов</h3>
-                <p lang="en" class="team-profession">Marketing</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+              <div class="team__container">
+                <h3 class="team__name">Микола Тарасов</h3>
+                <p lang="en" class="team__profession">Marketing</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
               </div>
             </li>
-            <li class="team-link">
+            <li class="team__link">
               <img src="./images/team/img3.jpg" alt="Михайло Єрмаков" width="270" />
-              <div class="team-container">
-                <h3 class="team-title">Михайло Єрмаков</h3>
-                <p lang="en" class="team-profession">UI Designer</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+              <div class="team__container">
+                <h3 class="team__name">Михайло Єрмаков</h3>
+                <p lang="en" class="team__profession">UI Designer</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg width="20" height="20" class="social-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link"
+                      ><svg width="20" height="20" class="social__icon">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -329,48 +329,48 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="clients section">
         <div class="container">
-          <h2 class="clients-title">Постійні клієнти</h2>
-          <ul class="clients-list list">
+          <h2 class="clients__title">Постійні клієнти</h2>
+          <ul class="clients__list list">
             <li>
-              <a href="" class="clients-link">
-                <svg width="106" height="60" class="clients-icon">
+              <a href="" class="clients__link">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/svg/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="clients-link">
-                <svg width="106" height="60" class="clients-icon">
+              <a href="" class="clients__link">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/svg/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="clients-link">
-                <svg width="106" height="60" class="clients-icon">
+              <a href="" class="clients__link">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/svg/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="clients-link">
-                <svg width="106" height="60" class="clients-icon">
+              <a href="" class="clients__link">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/svg/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="clients-link">
-                <svg width="106" height="60" class="clients-icon">
+              <a href="" class="clients__link">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/svg/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="clients-link">
-                <svg width="106" height="60" class="clients-icon">
+              <a href="" class="clients__link">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/svg/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
@@ -416,26 +416,26 @@
           <p class="social-title">приєднуйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
