--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
@@ -289,26 +288,26 @@
           <p class="social-title">приєднуйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="footer-social">
-              <a href="" class="social-link"
-                ><svg width="20" height="20" class="social-icon">
+              <a href="" class="social__link"
+                ><svg width="20" height="20" class="social__icon">
                   <use href="./images/svg/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
